--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -31,6 +31,10 @@
         <param name="android-package" value="org.chromium.ChromeNavigation" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="ChromeNotifications">
+        <param name="android-package" value="org.chromium.ChromeNotifications" />
+        <param name="onload" value="true" />
+    </feature>
     <feature name="ChromeStorage">
         <param name="android-package" value="org.chromium.ChromeStorage" />
     </feature>
@@ -43,5 +47,4 @@
     <preference name="iosPersistentFileLocation" value="Library" />
     <preference name="AndroidPersistentFileLocation" value="Internal" />
     <content src="plugins/org.chromium.bootstrap/chromeapp.html" />
-    <access origin="*" />
 </widget>
